--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ textarea {
    ========================================================================== */
 
 html {
-  background-color: #fff;
+  background-color: #222;
   height: 100%;
   width: 100%;
 }
@@ -105,30 +105,28 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 0 2em;
   font-size: 1.25em;
-  height: 100%;
   color: #fff;
+  display: flex;
+  justify-content: center;
+
 }
 
 header,
 footer {
   background-color: #222;
-  height: 80px;
   width: 100%;
+  display: flex;
+  justify-content: flex-start;
 }
 
 main {
-  background-color: #ccc;
-  height: 250px;
+  background-color: #222;
+ 
   width: 100%;
-}
-
-header,
-footer,
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #fff;
 }
 
 .flex-container {
@@ -137,18 +135,48 @@ main {
     align-items: center;
     flex-flow: row wrap;
     justify-content: space-between;
+    max-width: 1200px;
+   
 }
 
 .flex-items {
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1em;
+  background-color: #222;
   width: 30%;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  
+}
+
+p span {
+    font-family: 'Lora', sans-serif;
+}
+main p {
+    font-size: 1.35em;
+}
+header h1 {
+    font-family: 'Lora', sans-serif;
+    font-size: 3em;
+
+}
+#div-2 {
+    border-left: 1px solid #555;
+}
+#div-3 {
+    border-left: 1px solid #555;
+    display: flex;
+    justify-content: space-around;
+}
+footer {
+    border-top: 1px solid #fff;
+
+}
+footer i {
+    padding: 30px 20px 0 0;
 }
 
 /* ==========================================================================
