--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.5em;
   
 }
 
@@ -165,11 +166,13 @@ header h1 {
 }
 #div-2 {
     border-left: 1px solid #555;
+    padding-left: 1em;
 }
 #div-3 {
     border-left: 1px solid #555;
-    display: flex;
-    justify-content: space-around;
+    padding-left: 1em;
+  
+   
 }
 footer {
     border-top: 1px solid #fff;
